--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,19 @@ steps:
     configuration: 'Release'
     xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
     xcodeVersion: 'default' # Options: 8, 9, default, specifyPath
+
+# Install Apple Certificate
+# Install an Apple certificate required to build on a macOS agent
+- task: InstallAppleCertificate@2
+  inputs:
+    certSecureFile: 
+    #certPwd: # Optional
+    #keychain: 'temp' # Options: default, temp, custom
+    #keychainPassword: # Required when keychain == Custom || Keychain == Default
+    #customKeychainPath: # Required when keychain == Custom
+    #deleteCert: # Optional
+    #deleteCustomKeychain: # Optional
+    #signingIdentity: # Optional
+
+- task: CocoaPods@0
+  displayName: 'pod install using the CocoaPods task with defaults'
