--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 # Install an Apple certificate required to build on a macOS agent
 - task: InstallAppleCertificate@2
   inputs:
-    certSecureFile: 'ola.p12'
+    certSecureFile: 'Certificates.p12'
     certPwd: testtest
     #keychain: 'temp' # Options: default, temp, custom
     #keychainPassword: # Required when keychain == Custom || Keychain == Default
