--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
     actions: 'build'
     scheme: ''
     sdk: 'iphoneos'
-    configuration: 'Release'
+    configuration: 'Debug'
     xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
     xcodeVersion: 'Xcode 10' # Options: 8, 9, default, specifyPath
     xcodeDeveloperDir: 'XCODE_10_DEVELOPER_DIR=/Applications/Xcode_10.0.0.app/Contents/Developer'
